# EML-urban-hydro-model

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: performance.md
docs/: conf.py  index.md
docs/src/: reference.md
eml_urban_hydro_model/: __init__.py  area_parameters.py  model.py  preprocessing.py  rho.py  soil_parameters.py  vegetation_parameters.py
eml_urban_hydro_model/type_models/: area_parameters.py  model_input.py  model_output.py  model_parameters.py  preprocessing_parameters.py  rho_parameters.py  soil_parameters.py  vegetation_parameters.py
examples/: example.py  pluvio.pkl
tests/: test_dummy.py  test_example.py
