[build-system]
requires = ["setuptools>=75.8.0", "setuptools_scm[toml]>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-urban-hydro-model"
dynamic = ["version"]
description = "Urban Hydrological Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
