[build-system]
requires = ["setuptools>=75.8.0", "setuptools_scm[toml]>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-urban-hydro-model"
dynamic = ["version"]
description = "Urban Hydrological Model"
authors = [
	{ name = "Yacine M'Hamdi", email = "yacine.mhamdi@epfl.ch" },
	{ name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandera>=0.22.1",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "myst-parser>=4.0.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "sphinx>=8.1.3",
    "sphinx-press-theme>=0.9.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
doc = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-press-theme>=0.9.1",
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
